# PieMenyu

./: .gitignore  README.md  compile.bat  pubspec.yaml
beforeCompileScript/: 0-build-pie-menyu.bat  1-move-pie-menyu-to-asset.bat
global_hotkey/: .metadata  README.md  ffigen.yaml  pubspec.yaml
global_hotkey/example/: README.md  pubspec.yaml
global_hotkey/lib/: global_hotkey.dart  hotkey.dart  hotkey_event.dart  windows_hotkey_manager.dart
global_hotkey/linux/: CMakeLists.txt
global_hotkey/macos/: global_hotkey.podspec
global_hotkey/src/: CMakeLists.txt  global_hotkey.c
global_hotkey/test/: global_hotkey_test.dart
global_hotkey/windows/: CMakeLists.txt
installer/: inno.iss
lib/: main.dart
lib/active_windows/: active_windows.dart  window_info.dart
lib/db/: db.dart  pie_item.dart  pie_item.g.dart  pie_item_task.dart  pie_item_task.g.dart  pie_menu.dart  pie_menu.g.dart  profile.dart  profile.g.dart  profile_hotkey_to_pie_menu_id.dart  profile_hotkey_to_pie_menu_id.g.dart
lib/i18n/: en_US.json
lib/pieItemTasks/: mouse_click_task.dart  move_window_task.dart  open_app_task.dart  open_editor_task.dart  open_folder_task.dart  open_sub_menu_task.dart  open_url_task.dart  resize_window_task.dart  run_file_task.dart  send_key_task.dart  (+1 more)
linux/: CMakeLists.txt
pie_menyu/: .gitignore  README.md  pubspec.yaml
pie_menyu_core/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  pubspec.yaml
pie_menyu_editor/: .gitignore  README.md  pubspec.yaml
pie_menyu_installer/: installerScript.iss
test/: widget_test.dart
windows/: CMakeLists.txt
(+308 files in other folders)
